fixed spacing of elements

--- a/style.css
+++ b/style.css
@@ -19,3 +19,7 @@ hr {
 .centered {
   justify-content: center;
 }
+
+li {
+  list-style-type: none;
+}
